Move some templates and make some clarifications in README

--- a/forums/templates/forums/forum_list.html
+++ b/forums/templates/forums/forum_list.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{% extends "forums_base.html" %}
 
-{% block head_title %}Forums{% endblock %}
+{% block title %}Forums{% endblock %}
 
 {% block content %}
 <ul class="breadcrumb">
