--- a/forums/templates/forums/post_list.html
+++ b/forums/templates/forums/post_list.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{% extends "forums_base.html" %}
 
-{% block head_title %}{{ thread.title }}{% endblock %}
+{% block title %}{{ thread.title }}{% endblock %}
 
 {% block content %}
 <ul class="breadcrumb">
