--- a/forums/templates/forums/thread_form.html
+++ b/forums/templates/forums/thread_form.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{% extends "forums_base.html" %}
 
-{% block head_title %}New Thread{% endblock %}
+{% block title %}New Thread{% endblock %}
 
 {% block content %}
 <ul class="breadcrumb">
